fixed alignment of food images and map place holder

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -137,6 +137,10 @@ button {
     display: inline-block;
 }
 
+.random-img {
+    width: 200px;
+}
+
     /* #0 {
     border-radius: 20%;
     border: solid;
